--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
 	<body>
 		<div class="container about-page">
+			<!-- Header Begin -->
 			<header class="container">
 				<nav>
 					<img src="img/lambda-black.png" alt="Lambda" />
@@ -27,7 +28,9 @@
 					</div>
 				</nav>
 			</header>
+			<!-- Header End -->
 
+			<!-- About Section Begin -->
 			<section class="about">
 				<img src="/img/jumbo-about.png" alt="City Skyline" />
 				<div class="about-info">
@@ -41,7 +44,9 @@
 					</p>
 				</div>
 			</section>
+			<!-- About Section End -->
 
+			<!-- Info Cards Section Begin -->
 			<section class="info-cards">
 				<div class="card">
 					<img src="img/about-plan.png" alt="strategy" />
@@ -91,7 +96,9 @@
 					</form>
 				</div>
 			</section>
+			<!-- Info Cards Section End -->
 
+			<!-- Wok Section Begin -->
 			<section class="work">
 				<h2>Let's Work Together</h2>
 				<p>
@@ -102,7 +109,9 @@
 					workplace diversity and empowerment.
 				</p>
 			</section>
+			<!-- Work Section End -->
 
+			<!-- Footer Begin -->
 			<footer>
 				<nav>
 					<a href="index.html">Home</a>
@@ -112,6 +121,7 @@
 					<a href="#">Contact</a>
 				</nav>
 			</footer>
+			<!-- Footer End -->
 		</div>
 		<!-- container -->
 	</body>
