--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 			<footer>
 				<nav>
 					<a href="index.html">Home</a>
-					<a href="#">About</a>
+					<a href="/about.html">About</a>
 					<a href="#">Products</a>
 					<a href="#">Blog</a>
 					<a href="#">Contact</a>
